# automatedAlarm

./: .travis.yml  README.md  TestAutomatedAlarm.py  alarm.py  automatedAlarm.py  pyproject.toml
tests/: test_automated_alarm.py
