[tool.poetry]
name = "automated-alarm"
version = "0.1.0"
description = ""
authors = ["Hundredvisionsguy <cwinikka@gmail.com>"]
readme = "README.md"
packages = [{include = "automated_alarm"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
